# quitter

quitter/: .tm_project.cache  AUTHORS  DEADJOE  Makefile  Makefile.am  Makefile.in  Makefile.win  Quitter.glade  Quitter.gladep  Quitter.prj  Quitter.pws  QuitterApplet.server  TODO  aclocal.m4  config.h  config.status  configure  configure.in  configure.scan  libtool  quitter-devcpp.dev  quitter-devcpp.layout  quitter-devcpp_private.h  quitter-devcpp_private.rc
quitter/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
quitter/src/: Makefile  Makefile.am  Makefile.in  about_window.c  about_window.h  appdata.c  appdata.h  callbacks.c  callbacks.h  edit_window.c  edit_window.h  interface.c  interface.h  main.c  prefs.c  prefs.h  prefs_window.c  prefs_window.h  quitter.rc  quitterapplet.c  quitterapplet.h  resource.h  stats_window.c  stats_window.h  support.c  tray_win32.c  tray_win32.h  trayicon.c  trayicon.h  windowposition.c  windowposition.h
quitter/src/.deps/: about_window.Po  appdata.Po  callbacks.Po  edit_window.Po  interface.Po  main.Po  prefs.Po  prefs_window.Po  quitter.Po  quitterapplet.Po  stats_window.Po  support.Po  windowposition.Po
